FIXED ALIGNMENT

--- a/src/app/pages/dashboards/default/default.component.scss
+++ b/src/app/pages/dashboards/default/default.component.scss
@@ -1878,4 +1878,16 @@ border-radius: 8px;
 // }
 
 
+@media screen and (min-width:1023px)  and (max-width:1180px) {
+    .name_h{
+        margin-left: 3vw;
+    }
+  .inner_content{
+    width: 65%;
+  }
+    
+    
+    
+}
+
  
